--- a/src/Components/Styles/Errors.css
+++ b/src/Components/Styles/Errors.css
@@ -1,8 +1,9 @@
 .Error_Image {
-  height: 200px;
+  height: 5%;
   margin-top: 60px;
 }
 .Error_Text {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: Helvetica, sans-serif;
   margin-top: 40px;
+  color: black;
 }
